--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
 <body>
-  <div class="container">
-    <div class="wrapper">
+  <main>
       <div class="img-top">
         <img src="images/image-equilibrium.jpg">
         <div class="img-overlay">
@@ -35,7 +34,6 @@
         <img src="images/image-avatar.png">
         <p>Creation of <a href="">Jules Wyvern</a></p>
       </div>
-    </div>
-  </div>
+  </main>
 </body>
 </html>
