--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <main>
       <div class="img-top">
-        <img src="images/image-equilibrium.jpg">
+        <img src="images/image-equilibrium.jpg" alt="Equilibrium NFT product image">
         <div class="img-overlay">
-          <img src="images/icon-view.svg">
+          <img src="images/icon-view.svg" alt="Icon for viewing the nft product">
         </div>
       </div>
       <div class="box-text">
@@ -20,11 +20,11 @@
         <p>Our Equilibrium collection promotes balance and calm.</p>
         <div class="flex">
           <div class="eth">
-            <img src="images/icon-ethereum.svg">
+            <img src="images/icon-ethereum.svg" alt="Ethereum coin icon">
             <p>0.041 ETH</p>
           </div>
           <div class="days">
-            <img src="images/icon-clock.svg">
+            <img src="images/icon-clock.svg" alt="Remaining time icon">
             <p>3 days left</p>
           </div>
         </div>
