--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <hr>
       <div class="autor">
-        <img src="images/image-avatar.png">
+        <img src="images/image-avatar.png" alt="User avatar icon">
         <p>Creation of <a href="">Jules Wyvern</a></p>
       </div>
   </main>
